Finalisation of API tests