@@ -1,6 +1,7 @@
 package com.leondailani.starlingroundup;
 
-import com.leondailani.starlingroundup.api.StarlingClient;
+import com.leondailani.starlingroundup.api.*;
+import com.leondailani.starlingroundup.exceptions.SavingGoalFailException;
 import com.leondailani.starlingroundup.models.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -21,9 +22,13 @@ import static org.junit.jupiter.api.Assertions.*;
  * Tests for the StarlingClient class.
  * These tests mock external HTTP requests to the Starling Bank API.
  */
-class StarlingClientTest {
+class ApiClientTests {
 
-    private StarlingClient starlingClient;
+    private AccountsApiClient accountsApiClient;
+    private TransactionsApiClient transactionsApiClient;
+    private SGCreateApiClient sgCreateApiClient;
+    private SGTransferApiClient sgTransferApiClient;
+    private BalanceApiClient balanceApiClient;
 
     @Mock
     private HttpClient mockHttpClient;
@@ -40,7 +45,11 @@ class StarlingClientTest {
         MockitoAnnotations.openMocks(this);
         when(mockHttpClient.send(any(HttpRequest.class), eq(HttpResponse.BodyHandlers.ofString())))
                 .thenReturn(mockResponse);
-        starlingClient = new StarlingClient("fakeAccessToken", mockHttpClient);
+        accountsApiClient = new AccountsApiClient("fakeAccessToken", mockHttpClient);
+        transactionsApiClient = new TransactionsApiClient("fakeAccessToken", mockHttpClient);
+        sgCreateApiClient = new SGCreateApiClient("fakeAccessToken", mockHttpClient);
+        sgTransferApiClient = new SGTransferApiClient("fakeAccessToken", mockHttpClient);
+        balanceApiClient = new BalanceApiClient("fakeAccessToken", mockHttpClient);
     }
 
     /**
@@ -54,16 +63,16 @@ class StarlingClientTest {
         when(mockResponse.statusCode()).thenReturn(200);
 
         // Execute the method to test
-        ClientAccounts result = starlingClient.getAccounts();
+        ClientAccounts result = accountsApiClient.getAccounts();
 
         // Verify the results
         assertNotNull(result);
         assertFalse(result.getAccounts().isEmpty());
-        assertEquals("example", result.getAccounts().get(0).getAccountUid());
+        assertEquals("example", result.getAccounts().getFirst().getAccountUid());
     }
 
     /**
-     * Test for getWeeklyTransactions method of StarlingClient.
+     * Test for getWeeklyTransactions
      * Checks if the method correctly handles and parses the response.
      */
     @Test
@@ -83,20 +92,20 @@ class StarlingClientTest {
         ZonedDateTime endOfWeek = startOfWeek.plusDays(7);
 
         // Execute the method to test
-        FeedItems result = starlingClient.getWeeklyTransactions(accountUid, categoryUid, startOfWeek, endOfWeek);
+        FeedItems result = transactionsApiClient.getWeeklyTransactions(accountUid, categoryUid, startOfWeek, endOfWeek);
 
         // Verify the results
         assertNotNull(result);
         assertFalse(result.getFeedItems().isEmpty());
-        assertEquals(841, result.getFeedItems().get(0).getAmount().getMinorUnits());
+        assertEquals(841, result.getFeedItems().getFirst().getAmount().getMinorUnits());
     }
 
     /**
-     * Test for createSavingsGoal method of StarlingClient.
+     * Test for createSavingsGoal method.
      * Ensures that the method correctly interprets a successful response.
      */
     @Test
-    void testCreateSavingsGoal() throws IOException, InterruptedException {
+    void testCreateSavingsGoal() throws IOException, InterruptedException, SavingGoalFailException {
         // Prepare the mock response
         when(mockResponse.body()).thenReturn("{\"success\":true,\"errors\":[],\"savingsGoalUid\":\"example-savings-goal-uid\"}");
         when(mockResponse.statusCode()).thenReturn(201);
@@ -110,7 +119,7 @@ class StarlingClientTest {
         SavingsGoalRequest goalRequest = new SavingsGoalRequest("Trip to Paris", "GBP", 123456);
 
         // Execute the method to test
-        SavingsGoal result = starlingClient.createSavingsGoal(accountUid, goalRequest);
+        SavingsGoal result = sgCreateApiClient.createSavingsGoal(accountUid, goalRequest);
 
         // Verify the results
         assertNotNull(result);
@@ -119,11 +128,11 @@ class StarlingClientTest {
     }
 
     /**
-     * Test for addMoneyToSavingsGoal method of StarlingClient.
+     * Test for addMoneyToSavingsGoal method.
      * Validates that the funds transfer is processed correctly.
      */
     @Test
-    void testAddMoneyToSavingsGoal() throws IOException, InterruptedException {
+    void testAddMoneyToSavingsGoal() throws IOException, InterruptedException, SavingGoalFailException {
         // Prepare the mock response
         when(mockResponse.body()).thenReturn("{\"success\":true,\"errors\":[]}");
         when(mockResponse.statusCode()).thenReturn(200);
@@ -139,11 +148,38 @@ class StarlingClientTest {
         int amount = 1000; // Example amount in minor units
 
         // Execute the method to test
-        SavingsGoalTransfer result = starlingClient.addMoneyToSavingsGoal(accountUid, savingsGoalUid, amount);
+        SavingsGoalTransfer result = sgTransferApiClient.addMoneyToSavingsGoal(accountUid, savingsGoalUid, amount);
 
         // Verify the results
         assertNotNull(result);
         assertTrue(result.getSuccess());
+    }
+
+    /**
+     * Test for addMoneyToSavingsGoal method.
+     * Validates that the funds transfer is processed correctly.
+     */
+    @Test
+    void testgetBalance() throws IOException, InterruptedException {
+        // Prepare the mock response
+        when(mockResponse.body()).thenReturn("{\"amount\":{\"minorUnits\":1000}}");
+        when(mockResponse.statusCode()).thenReturn(200);
+
+        // Mock the HttpClient to return the mock response
+
+        when(mockHttpClient.send(any(HttpRequest.class), eq(HttpResponse.BodyHandlers.ofString())))
+                .thenReturn(mockResponse);
+
+        // Prepare parameters for the method call
+        String accountUid = "example-uid";
+
+        // Execute the method to test
+        Balance result = balanceApiClient.getBalance(accountUid);
+
+        // verify the results
+        assertNotNull(result);
+        assertEquals(1000, result.getAmount().getMinorUnits());
+
     }
 
 
